--- a/Проект/cat.html
+++ b/Проект/cat.html
@@ -30,9 +30,9 @@
 			<div class="num">+7-960-526-11-77</div>
 		</div>
 	</div>
-
 	<div class="cat">
-		<p class="cat-head">ECONOEME</p>
+			<p class="cat-head">ECONOEME</p>
+
 <!-- эконом -->
 		<div class="eco">
 			
@@ -79,7 +79,7 @@
 		<!-- сред энд -->
 		<!-- лухари -->
 		
-		<p class="cat-head">Лухари</p>
+		<p class="cat-head">Luxury</p>
 		<div class="eco">
 			
 			<div class="fird-car c">
@@ -100,7 +100,6 @@
 		</div>
 		<!-- лухари энд -->
 	</div>
-	
 
 
 </main>
