--- a/бебра/index.html
+++ b/бебра/index.html
@@ -3,6 +3,9 @@
 <head>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Koulen&family=Oswald:wght@300&family=Truculenta:opsz@12..72&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Koulen&family=Oswald:wght@300&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>AXIT</title>
@@ -53,6 +56,38 @@
 			<p class="f-txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore<br> et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi<br> ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu</p>
 			<p class="f-txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
 			<img src="https://forum.enlisted.net/uploads/default/original/3X/1/9/195e33a66f910b0edf9f18455d19047881fde8fd.png" class="line3" width="20%" height="20px">
+		</div>
+	</div>
+	<div class="fifth">
+		<p class="fif-head">WHY THIS IS AWESOME</p>
+		<img src="https://forum.enlisted.net/uploads/default/original/3X/1/9/195e33a66f910b0edf9f18455d19047881fde8fd.png" class="line4" width="15%" height="20px">
+		<p class="fif-txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit,<br> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud<br> exercitation ullamco</p>
+			<div class="icone">
+				<div class="ico">
+					<img src="https://image.winudf.com/v2/image/Y29tLkJlc3QuQXJhYmljLkVuZ2xpc2gua2V5Ym9hcmQudHlwaW5nX2ljb25fMTUzNzk3MjU1OF8wNDU/icon.png?w=&fakeurl=1" width="20%">
+					<p class="ico-txt">Whel crafted</p>
+					<p class="ic">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br> eiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam, quis nostrud exercitation ullamco<br> laboris nisi ut aliquip ex ea commodo consequat.<br> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br> Excepteur sint occaecat cupidatat non</p>
+				</div>
+				<div class="ico2">
+					<img src="https://s3.amazonaws.com/thinkific/site_themes/logo_000/006/637/1455859305.medium.png?1455859305" class="ico2" width="27%">
+					<p class="ico-txt">Thoughtful design</p>
+					<p class="ic">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br> eiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam, quis nostrud exercitation ullamco<br> laboris nisi ut aliquip ex ea commodo consequat.<br> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br> Excepteur sint occaecat cupidatat non</p>
+				</div>
+				<div class="ico3">
+					<img src="https://cdn0.iconfinder.com/data/icons/energy-industry-1/60/energy_electricity_icon_voltage_high_current_power_production-512.png" class="ico2" width="20%">
+					<p class="ico-txt">Easy to castomize</p>
+					<p class="ic">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br> eiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam, quis nostrud exercitation ullamco<br> laboris nisi ut aliquip ex ea commodo consequat. <br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br> Excepteur sint occaecat cupidatat non</p>
+				</div>
+		</div>
+	</div>
+	<div class="footer">
+		<div class="cont">
+			<ul>
+				<li>torch1top@gmail.com</li>
+				<li>+7 960 526 11 77</li>
+				<li>Ул. Беброва</li>
+				<li>о нас</li>
+			</ul>
 		</div>
 	</div>
 </main>
