--- a/PS 5/index.html
+++ b/PS 5/index.html
@@ -5,7 +5,7 @@
 
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
-	<title>sosihui</title>
+	<title>Розыгрыш! Play station 5</title>
 </head>
 <body>
 	<div class="intro" id="intro">
